# akari_render

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  README.md  a.py  akari.py  build.rs  imgui.ini  recipe.py  run.py  run.sh  setpath.ps1  setpath.sh  vcpkg.json
akari_blender/: Cargo.toml
akari_blender/cpp_ext/: akari_blender_cpp_ext.cpp
akari_blender/src/: lib.rs
akari_nodegraph/: Cargo.toml
akari_nodegraph/src/: gen.rs  lib.rs  parse.rs
akari_render/: Cargo.toml  build.rs
akari_render/src/: api.rs  color.rs  film.rs  filter.rs  geometry.rs  gui.rs  heap.rs  interaction.rs  lib.rs  load.rs  mesh.rs  microfacet.rs  node.rs  sampling.rs  scene.rs  scenegraph.rs  shadergraph.rs
akari_render/src/camera/: mod.rs
akari_render/src/data/: mod.rs  rgb2spec.rs
akari_render/src/integrator/: gpt.rs  mcmc.rs  mcmc_opt.rs  mcmc_s.rs  mod.rs  normal.rs  pt.rs  wfpt.rs
akari_render/src/light/: area.rs  mod.rs  point.rs
akari_render/src/sampler/: mcmc.rs  mod.rs
akari_render/src/surface/: diffuse.rs  glass.rs  mod.rs  principled.rs
akari_render/src/svm/: compiler.rs  eval.rs  mod.rs
akari_render/src/texture/: mod.rs
akari_render/src/util/: alias_table.rs  binserde.rs  convert_gltf.rs  distribution.rs  hash.rs  integration.rs  lerp.rs  mod.rs  profile.rs
akari_scenegraph/: Cargo.toml  blender_src_path.txt  build.rs
akari_scenegraph/cpp_ext/: CMakeLists.txt
akari_scenegraph/python/: exporter.py
akari_scenegraph/src/: blender_util.rs  lib.rs  scene.rs
cpp_extension/: CMakeLists.txt  ext-impl.cpp  rust-api.h  vcpkg.json
cpp_extension/ext/: CMakeLists.txt
cpp_extension/include/: rust-api.h  util.h
cpp_extension/src/: image.cpp  rt.cpp
crates/akari_api/: Cargo.toml
crates/akari_api/src/: lib.rs
crates/akari_common/: Cargo.toml
crates/akari_common/src/: lib.rs
crates/akari_cpp_ext/cpp_ext/: CMakeLists.txt  akari_blender_cpp_ext.cpp  akari_blender_cpp_ext.h  akari_cpp_ext.cpp  akari_cpp_ext.h  rgb2spec_opt.cpp
crates/akari_render/: Cargo.toml
crates/akari_render/cpp_ext/: CMakeLists.txt
crates/akari_render/src/: api.rs  color.rs  cpp_ext.rs  film.rs  geometry.rs  gui.rs  interaction.rs  lib.rs  load.rs  mesh.rs  microfacet.rs  sampling.rs  scene.rs
crates/akari_scenegraph/: Cargo.toml  build.rs
crates/akari_scenegraph/cpp_ext/: CMakeLists.txt  akari_blender_cpp_ext.cpp  akari_blender_cpp_ext.h
crates/akari_scenegraph/python/: exporter.py  main.py
crates/akari_scenegraph/src/: blender.rs  blender_util.rs  lib.rs  scene.rs  shader.rs
crates/lib/akari/: Cargo.toml
crates/lib/akari_common/: Cargo.toml
nano-akari/lib/: CMakeLists.txt
src/: CMakeLists.txt  accel.rs  api.rs  arrayvec.rs  bsdf.rs  camera.rs  color.rs  config.py  distribution.rs  film.rs  geometry.rs  interaction.rs  lib.rs  light.rs  mesh.rs  microfacet.rs  nn_v2.rs  radix_sort.rs  sampler.rs  sampling.rs  scene.rs  scenegraph.rs  shape.rs  texture.rs  util.rs  varray.rs  wavefront.rs
src/App/: Akari.cpp  AkariExpr.cpp
src/Core/: Application.cpp  Class.cpp  Config.cpp  Film.cpp  Image.cpp  Logger.cpp  Microfacet.cpp  Parallel.cpp  Plugin.cpp  Reflect.cpp  SceneGraph.cpp  Serialize.cpp
src/Render/: BSDF.cpp  CMakeLists.txt  Interaction.cpp  Microfacet.cpp  Reflection.cpp  Scene.cpp  SceneGraph.cpp  Visibility.cpp
src/Test/: CMakeLists.txt  TestBSDF.cpp  jit.cpp  simd.cpp  test-reflect.cpp  test_bsdf.cpp
src/Tool/: AkariConvert.cpp  CMakeLists.txt  MeshImporter.cpp  akari_convert.cpp
src/accel/: bvh.rs  embree.rs  mod.rs  qbvh.rs
src/akari/: api.h  array.h  bluenoise.h  common.h  embree.cpp  image.cpp  image.h  kdtree.h  macro.h  map.h  mathutil.h  pathtracer.h  pmr.cpp  pmr.h  profile.h  render.cpp  render.h  render_bdpt.cpp  render_ir.cpp  render_mlt.cpp  render_mlt.h  render_ppg.cpp  render_ppg.h  render_pt.cpp  render_smcmc.cpp  render_sms.cpp  render_xpu.h  scenegraph.cpp  scenegraph.h  thread.h  util.h  util_xpu.h
src/akari-engine/: CMakeLists.txt  app.cpp  app.h  engine.cpp  util.h
src/akari/gpu/: api.h  (+8 more)
src/akaric/: akaric.cpp  ast.h  base.h  builtins.asl  codegen.cpp  codegen.h  lexer.cpp  lexer.h  panic.h  parser.cpp  parser.h  type.cpp  type.h
src/app/: Akari.cpp  AkariExpr.cpp  akari.cpp  akari_expr.cpp  lib.cpp
src/asl/: api.cpp  lexer.cpp  llvm_backend.cpp  parser.cpp  type.cpp
src/bidir/: mod.rs
src/camera/: mod.rs
src/compute/: debug.cpp  ir.cpp  irbuilder.cpp  lang.cpp  transform.cpp
src/core/: Application.cpp  Class.cpp  Config.cpp  Film.cpp  Image.cpp  Logger.cpp  Parallel.cpp  Plugin.cpp  Reflect.cpp  Serialize.cpp  application.cpp  component.cpp  film.cpp  image.cpp  logger.cpp  parallel.cpp  plugin.cpp  reflect.cpp  resouce.cpp  serialize.cpp
src/data/: ltc.rs  mod.rs
src/diff-akari/: CMakeLists.txt  test-enoki-nn.cpp
src/gpu/: accel.rs  device.cpp  mesh.rs  mod.rs  pt.rs  scene.rs
src/integrator/: ao.rs  bdpt.rs  erpt.rs  gpt.rs  mcmc.rs  mcmc_opt.rs  mmlt.rs  mod.rs  normal.rs  normalvis.rs  nrc.rs  path.rs  ppg.rs  pssmlt.rs  pt.rs  serpt.rs  spath.rs  sppm.rs
src/light/: area.rs  mod.rs
src/ltc/: mod.rs
src/main/: CMakeLists.txt  akari-cli.cpp  akari-gui.cpp  akari-import.cpp
src/nano-akari/: CMakeLists.txt
src/net/: message.rs  mod.rs  server.rs
src/pbrt-v4-rgb2spec-opt/: CMakeLists.txt  rgb2spec_opt.cpp
src/pyakari/: module.cpp
src/render/: BSDF.cpp  CMakeLists.txt  Interaction.cpp  Microfacet.cpp  Reflection.cpp  Scene.cpp  SceneGraph.cpp  Visibility.cpp  bsdf.cpp  bssrdf.cpp  config.cpp  init.cpp  interaction.cpp  microfacet.cpp  reflection.cpp  scene.cpp  scene_graph.cpp  visibility.cpp
src/sampler/: mcmc.rs  mod.rs
src/surface/: diffuse.rs  glass.rs  mod.rs  principled.rs
src/test/: CMakeLists.txt  jit.cpp  simd.cpp  test-reflect.cpp  test_bsdf.cpp
src/texture/: mod.rs
src/tool/: CMakeLists.txt  akari_convert.cpp  gen_vecmath.py  parser_combinator.py  reflection_gen.py  reflection_parser.cpp
src/util/: alias_table.rs  arrayvec.rs  binserde.rs  convert_gltf.rs  mod.rs  profile.rs  radix_sort.rs  rgb2spec.rs  tiledtexture.rs
(+1190 files in other folders)
