[package]
edition = "2021"
name = "akari_render"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
exr = "1.5.0"
hexf = "0.2.1"
image = "0.24.3"
indicatif = "0.16.2"
lazy_static = "1.4"
luisa_compute = {path = "../luisa-compute-rs/luisa_compute"}
# luisa_compute = { git = "https://github.com/LuisaGroup/luisa-compute-rs.git", branch="next"}
parking_lot = "0.12"
rand = "0.8.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tobj = "3.2.3"

[[bin]]
name = "akari_import"
path = "src/bin/akari_import.rs"

[[bin]]
name = "akari_cli"
path = "src/bin/akari_cli.rs"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true
panic = 'unwind'
rpath = false

[profile.release-with-debuginfo]
debug = true
inherits = "release"

[profile.release]
lto = true
