[workspace]
members = [
    "crates/akari_render",
    "crates/akari_data",
    "crates/akari_scenegraph",
    "crates/akari_api",
    "crates/akari_common",
    "crates/akari_integrator",
]
resolver = "2"


[profile.dev]
opt-level = 2
incremental = true
debug = true
lto = "off"

[profile.release]
lto = "thin"