[package]
name = "akari_blender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akari_render = { path = "../akari_render" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
cmake = "0.1"

[lib]
crate-type = ["cdylib"]


[[bin]]
name = "akari_import"
path = "src/bin/import.rs"
