[package]
name = "akari_nodegraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1.0.33"
proc-macro2 = "1"
indexmap = "2.0.0"

[[bin]]
name = "nodec"
path = "src/bin/nodec.rs"
