[package]
edition = "2021"
name = "akari_render"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
exr = "1.5"
hexf = "0.2"
image = "0.24"
indicatif = "0.17"
lazy_static = "1"
log = "0.4"
luisa_compute = { path = "../../luisa-compute-rs/luisa_compute", features = [
    "glam",
    "oidn",
] }
akari_data = { path = "../akari_data" }
akari_scenegraph = { path = "../akari_scenegraph" }
# luisa_compute = { git = "https://github.com/LuisaGroup/luisa-compute-rs.git"}
parking_lot = "0.12"
rand = "0.8"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
libm = "0.2"
winit = "0.28"
glam = "0.24"

[build-dependencies]
cmake = "0.1.50"
serde = { version = "1" }
serde_json = "1"

[[bin]]
name = "akari_cli"
path = "src/bin/akari_cli.rs"

[[bin]]
name = "akari_test"
path = "src/bin/akari_test.rs"


# [lib]
# crate-type = ["dylib"]
