[package]
name = "akari_scenegraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.7.0"
base64 = "0.21"

[build-dependencies]
cmake = "0.1"

[lib]
crate-type = ["dylib"]


[[bin]]
name = "akari_import"
path = "src/bin/import.rs"
