[package]
name = "akari_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akari_render = { path = "../akari_render" }
akari_integrator = { path = "../akari_integrator" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "akari-cli"
path = "src/bin/akari_cli.rs"

[[bin]]
name = "akari-test"
path = "src/bin/akari_test.rs"
