[package]
name = "akari_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.8"
base64 = "0.21"
memmap2 = "0.9.0"
sha2 = "0.10"
libm = "0.2"
winit = "0.28"
glam = "0.24"
exr = "1.5"
hexf = "0.2"
image = "0.24"
indicatif = "0.17"
lazy_static = "1"
log = "0.4"
luisa_compute = { path = "../../../luisa-compute-rs/luisa_compute", features = [
    "glam",
    "oidn",
] }
parking_lot = "0.12"
rand = "0.8"
