[package]
edition = "2021"
name = "akari_render"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akari_common = { path = "../akari_common" }
akari_data = { path = "../akari_data" }
akari_scenegraph = { path = "../akari_scenegraph" }
akari_cpp_ext = { path = "../akari_cpp_ext" }
winit = "0.28"


[build-dependencies]
cmake = "0.1.50"
serde = { version = "1" }
serde_json = "1"


# [lib]
# crate-type = ["dylib"]
