[package]
name = "akari_scenegraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akari_common = { path = "../akari_common" }


[build-dependencies]
cmake = "0.1"
bindgen = "0.69.1"

# [lib]
# crate-type = ["dylib"]

[[bin]]
name = "akari-import"
path = "src/bin/import.rs"
