find_package(Vulkan REQUIRED)
find_package(glfw3)
add_subdirectory(ext/imgui)
file(GLOB ENGINE_SRC *.cpp)
add_library(akari_engine_core SHARED ${ENGINE_SRC})
target_link_libraries(akari_engine_core PUBLIC imgui akari::core)
set_target_properties(akari_engine_core PROPERTIES UNITY_BUILD ON)
target_include_directories(akari_engine_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
set_output_dir(akari_engine_core)
add_library(akari::engine::core ALIAS akari_engine_core)