find_package(assimp REQUIRED)
find_package(cxxopts REQUIRED)
add_executable(akari-cli akari-cli.cpp)
target_link_libraries(akari-cli PRIVATE akari::core)
set_output_dir(akari-cli)
add_executable(akari-import akari-import.cpp)
target_link_libraries(akari-import PRIVATE akari::core assimp::assimp cxxopts::cxxopts)
set_output_dir(akari-import)
if(MSVC)
    target_compile_options(akari-cli PUBLIC /bigobj)
    target_compile_options(akari-import PUBLIC /bigobj)
endif()
if(AKR_ENABLE_ENGINE)
    add_executable(akari-gui akari-gui.cpp)
    target_link_libraries(akari-gui PRIVATE akari::engine::core)
    set_output_dir(akari-gui)
endif()