[package]
edition = "2021"
name = "akari"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akari_common = {path = "../akari_common"}
akari_const = {path = "../akari_const"}
akari_core = {path = "../akari_core"}
akari_integrators = {path = "../akari_integrators"}
akari_utils = {path = "../akari_utils"}
serde = {version = "1.*", features = ["derive"]}

[[bin]]
name="playground"
path="src/playground.rs"