[package]
edition = "2021"
name = "akari_common"
version = "0.1.0"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bumpalo = "3.9.1"
bytemuck = {version = "1.7.*", features = ["derive"]}
clap = "2.33.3"
exr = "1.3.0"
glam = {version = "*", features = ["serde"]}
image = "0.23.14"
indicatif = "0.16.2"
lazy_static = "1.*"
log = {version = "0.4.14", features = ["std"]}
nalgebra = {version = "*", features = ["serde-serialize"]}
ordered-float = "2.1.1"
parking_lot = "*"
rand = "0.8.*"
rayon = "*"
region = "3"
serde = {version = "1.*", features = ["derive"]}
serde_json = "1.0"
statrs = "0.14.0"
tempfile = "3.3.0"
tobj = "3.2.0"
flate2 = "1.0.22"
num_cpus = "1.13.1"
half = "1.8.2"
os_pipe = "*"