[package]
edition = "2021"
name = "akari_core"
version = "0.1.0"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akari_common = {path = "../akari_common"}
akari_const = {path = "../akari_const"}
akari_utils = {path = "../akari_utils"}
embree-sys = {git = "https://github.com/shiinamiyuki/embree-sys", optional = true}
serde = {version = "1.*", features = ["derive"]}
os_pipe = "1.*"
bson = "2.1.0"
[features]
default = ["embree"]
embree = ["embree-sys"]
