[package]
edition = "2021"
name = "akari_gpu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.35", optional = true}
shaderc = {version = "0.7.2", optional = true}
vkc = {git = "https://github.com/shiinamiyuki/vkc", optional = true}
[features]
enable = ["ash", "shaderc", "vkc"]
