[package]
name = "akari_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akari = {path = "../../lib/akari"}
serde = {version = "1.*", features = ["derive"]}
uuid = { version = "0.8", features = ["serde", "v4"] }