add_plugin(RTDebug RTDebug.cpp)
add_plugin(PathTracer PathTracer.cpp)
add_plugin(GuidedPathTracer GuidedPathTracer.cpp)
add_plugin(BDPT BDPT.cpp)
target_link_libraries(BDPT AkariCoreBidir)
add_plugin(MMLT MMLT.cpp)
target_link_libraries(MMLT AkariCoreBidir)
add_plugin(DRMLT DRMLT.cpp)
target_link_libraries(DRMLT AkariCoreBidir)
add_plugin(Unified Unified.cpp)
target_link_libraries(Unified AkariCoreBidir)