add_plugin(RTDebug rtdebug.cpp)
add_plugin(PathTracer path_tracer.cpp)
add_plugin(GuidedPathTracer guided_path_tracer.cpp)
add_plugin(BDPT bdpt.cpp)
target_link_libraries(BDPT AkariCoreBidir)
add_plugin(MMLT mmlt.cpp)
target_link_libraries(MMLT AkariCoreBidir)
add_plugin(DRMLT drmlt.cpp)
target_link_libraries(DRMLT AkariCoreBidir)
add_plugin(Unified unified.cpp)
target_link_libraries(Unified AkariCoreBidir)